--- a/examples/package.json
+++ b/examples/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@swotel/examples",
+  "name": "@solarwinds-apm/examples",
   "private": true,
   "scripts": {
     "lint": "prettier --check . && eslint --max-warnings=0 *.js '*/**/*.{js,ts}'",
     "lint:fix": "eslint --fix *.js '*/**/*.{js,ts}' && prettier --write ."
   },
   "devDependencies": {
-    "@swotel/eslint-config": "workspace:^",
+    "@solarwinds-apm/eslint-config": "workspace:^",
     "eslint": "^8.41.0",
     "prettier": "^2.8.8"
   }
