--- a/packages/histogram/package.json
+++ b/packages/histogram/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@swotel/histogram",
-  "version": "0.1.0",
+  "name": "@solarwinds-apm/histogram",
+  "version": "0.0.0",
   "license": "Apache-2.0",
   "contributors": [
     "Raphaël Thériault <raphael.theriault@solarwinds.com>"
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@opentelemetry/api": "^1.4.x",
     "@opentelemetry/sdk-metrics": "1.13.x",
-    "@swotel/eslint-config": "workspace:^",
+    "@solarwinds-apm/eslint-config": "workspace:^",
     "@types/node": "^16.0.0",
     "eslint": "^8.41.0",
     "prettier": "^2.8.8",
