--- a/packages/merged-config/package.json
+++ b/packages/merged-config/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@swotel/merged-config",
-  "version": "0.1.0",
+  "name": "@solarwinds-apm/merged-config",
+  "version": "0.0.0",
   "license": "Apache-2.0",
   "contributors": [
     "Raphaël Thériault <raphael.theriault@solarwinds.com>"
@@ -17,7 +17,7 @@
     "test": "jest --verbose"
   },
   "devDependencies": {
-    "@swotel/eslint-config": "workspace:^",
+    "@solarwinds-apm/eslint-config": "workspace:^",
     "@types/jest": "^29.5.1",
     "@types/node": "^16.0.0",
     "eslint": "^8.41.0",
