mark otel api as a peer dependency

--- a/examples/hello/package.json
+++ b/examples/hello/package.json
@@ -5,6 +5,7 @@
     "start": "node -r solarwinds-apm index.js"
   },
   "dependencies": {
+    "@opentelemetry/api": "1.4.x",
     "solarwinds-apm": "workspace:^"
   }
 }
