--- a/examples/distributed-hello/package.json
+++ b/examples/distributed-hello/package.json
@@ -5,6 +5,7 @@
     "start": "concurrently \"node -r solarwinds-apm external.js\" \"node -r solarwinds-apm internal.js\""
   },
   "dependencies": {
+    "@opentelemetry/api": "1.4.x",
     "solarwinds-apm": "workspace:^"
   },
   "devDependencies": {
