--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,3 +5,12 @@ plugins:
     spec: "@yarnpkg/plugin-interactive-tools"
 
 yarnPath: .yarn/releases/yarn-3.6.0.cjs
+
+npmPublishAccess: public
+changesetIgnorePatterns:
+  - "**/test/**"
+  - "**/eslint.config.js"
+  - "**/jest.config.js"
+  - "**/.clang-format"
+  - "**/.eslintignore"
+  - "**/.prettierignore"
