--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "incremental": true,
+    "composite": true,
     "target": "es2021",
     "module": "commonjs",
     "declaration": true,
