--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "example": "node scripts/example.js",
     "lint": "prettier --check *.json *.md && turbo run lint",
     "lint:fix": "prettier --write *.json *.md && turbo run lint:fix",
-    "oboe": "node scripts/oboe.js",
+    "plugins:upgrade": "yarn plugin import version && yarn plugin import interactive-tools",
     "test": "turbo run test",
     "vscode": "yarn dlx @yarnpkg/sdks vscode && node scripts/vscode.js && prettier --write .vscode"
   },
