--- a/packages/lazy/tsconfig.json
+++ b/packages/lazy/tsconfig.json
@@ -3,7 +3,6 @@
   "include": ["src/**/*"],
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./dist",
-    "allowJs": true
+    "outDir": "./dist"
   }
 }
