--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -11,7 +11,7 @@
     "dist/"
   ],
   "scripts": {
-    "build": "tsc --project tsconfig.build.json",
+    "build": "tsc",
     "lint": "prettier --check . && eslint --max-warnings=0 *.js src/** test/**",
     "lint:fix": "eslint --fix *.js src/** test/** && prettier --write .",
     "test": "jest --verbose"
@@ -55,5 +55,8 @@
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
     "typescript": "^5.1.3"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
