--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -53,5 +53,8 @@
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
