--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -12,8 +12,8 @@
   ],
   "scripts": {
     "build": "tsc",
-    "lint": "prettier --check . && eslint --max-warnings=0 *.js src/** test/**",
-    "lint:fix": "eslint --fix *.js src/** test/** && prettier --write .",
+    "lint": "prettier --check . && eslint --max-warnings=0 *.js src/** test/**/*.ts",
+    "lint:fix": "eslint --fix *.js src/** test/**/*.ts && prettier --write .",
     "test": "jest --verbose"
   },
   "dependencies": {
@@ -25,7 +25,7 @@
     "@solarwinds-apm/dependencies": "workspace:^",
     "@solarwinds-apm/histogram": "workspace:^",
     "@solarwinds-apm/lazy": "workspace:^",
-    "semver": "^7.5.2"
+    "semver": "^7.5.3"
   },
   "peerDependencies": {
     "@opentelemetry/api": "1.4.x",
