--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -28,21 +28,19 @@
     "semver": "^7.5.3"
   },
   "peerDependencies": {
-    "@opentelemetry/api": "1.4.x",
-    "@opentelemetry/instrumentation-http": ">=0.14.0 <0.40.0"
+    "@opentelemetry/api": "1.4.x"
   },
   "peerDependenciesMeta": {
     "@opentelemetry/api": {
       "optional": false
-    },
-    "@opentelemetry/instrumentation-http": {
-      "optional": true
     }
   },
   "devDependencies": {
     "@opentelemetry/api": "1.4.x",
     "@opentelemetry/instrumentation": "0.40.x",
+    "@opentelemetry/instrumentation-bunyan": "^0.31.4",
     "@opentelemetry/instrumentation-http": "0.40.x",
+    "@opentelemetry/instrumentation-pino": "^0.33.4",
     "@opentelemetry/resources": "1.14.x",
     "@opentelemetry/sdk-trace-node": "1.14.x",
     "@solarwinds-apm/eslint-config": "workspace:^",
