--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -5,6 +5,14 @@
   "contributors": [
     "Raphaël Thériault <raphael.theriault@solarwinds.com>"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/solarwindscloud/solarwinds-apm-js.git",
+    "directory": "packages/eslint-config"
+  },
+  "bugs": {
+    "url": "https://github.com/solarwindscloud/solarwinds-apm-js/issues"
+  },
   "main": "index.js",
   "files": [
     "index.js"
