--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -1,13 +1,38 @@
 {
   "name": "solarwinds-apm",
   "version": "13.0.0",
+  "description": "OpenTelemetry-based SolarWinds APM library",
   "license": "Apache-2.0",
   "contributors": [
     "Raphaël Thériault <raphael.theriault@solarwinds.com>"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/solarwindscloud/solarwinds-apm-js.git",
+    "directory": "packages/solarwinds-apm"
+  },
+  "bugs": {
+    "url": "https://github.com/solarwindscloud/solarwinds-apm-js/issues"
+  },
+  "keywords": [
+    "tracing",
+    "instrumentation",
+    "performance",
+    "monitoring",
+    "profiling",
+    "debugging",
+    "analytics",
+    "metrics",
+    "apm",
+    "otel",
+    "opentelemetry",
+    "telemetry",
+    "solarwinds"
+  ],
   "main": "dist/index.js",
   "files": [
-    "dist/"
+    "dist/",
+    "CONFIGURATION.md"
   ],
   "scripts": {
     "build": "tsc",
