--- a/packages/histogram/package.json
+++ b/packages/histogram/package.json
@@ -24,13 +24,13 @@
     "lint:fix": "eslint --fix *.js src/** && prettier --write ."
   },
   "devDependencies": {
-    "@opentelemetry/api": "^1.4.x",
-    "@opentelemetry/sdk-metrics": "1.13.x",
+    "@opentelemetry/api": "1.4.x",
+    "@opentelemetry/sdk-metrics": "1.15.x",
     "@solarwinds-apm/eslint-config": "workspace:^",
     "@types/node": "^16.0.0",
-    "eslint": "^8.43.0",
-    "prettier": "^2.8.8",
-    "typescript": "^5.1.3"
+    "eslint": "^8.44.0",
+    "prettier": "^3.0.0",
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=16"
