--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -34,6 +34,9 @@
     "dist/",
     "CONFIGURATION.md"
   ],
+  "publishConfig": {
+    "provenance": true
+  },
   "scripts": {
     "build": "tsc",
     "lint": "prettier --check . && eslint --max-warnings=0 *.js src/**",
