--- a/packages/lazy/package.json
+++ b/packages/lazy/package.json
@@ -24,7 +24,8 @@
   "scripts": {
     "build": "tsc",
     "lint": "prettier --check . && eslint --max-warnings=0 *.js src/**",
-    "lint:fix": "eslint --fix *.js src/** && prettier --write ."
+    "lint:fix": "eslint --fix *.js src/** && prettier --write .",
+    "publish": "node ../../scripts/publish.js"
   },
   "devDependencies": {
     "@solarwinds-apm/eslint-config": "workspace:^",
