--- a/packages/bindings/npm/linux-arm64-musl/package.json
+++ b/packages/bindings/npm/linux-arm64-musl/package.json
@@ -7,6 +7,9 @@
     "url": "https://github.com/solarwindscloud/solarwinds-apm-js.git",
     "directory": "packages/bindings/npm/linux-arm64-musl"
   },
+  "scripts": {
+    "publish": "node ../../../../scripts/publish.js"
+  },
   "os": [
     "linux"
   ],
