--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,12 +1,3 @@
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: "@yarnpkg/plugin-version"
-  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: "@yarnpkg/plugin-interactive-tools"
-
-yarnPath: .yarn/releases/yarn-3.6.0.cjs
-
-npmPublishAccess: public
 changesetIgnorePatterns:
   - "**/test/**"
   - "**/eslint.config.js"
@@ -14,3 +5,14 @@ changesetIgnorePatterns:
   - "**/.clang-format"
   - "**/.eslintignore"
   - "**/.prettierignore"
+
+initScope: "@solarwinds-apm"
+initFields:
+  license: Apache-2.0
+  publishConfig:
+    provenance: true
+
+enableGlobalCache: false
+npmPublishAccess: public
+preferDeferredVersions: true
+preferInteractive: true
