--- a/examples/package.json
+++ b/examples/package.json
@@ -2,12 +2,12 @@
   "name": "@solarwinds-apm/examples",
   "private": true,
   "scripts": {
-    "lint": "prettier --check . && eslint --max-warnings=0 *.js '*/**/*.{js,ts}'",
-    "lint:fix": "eslint --fix *.js '*/**/*.{js,ts}' && prettier --write ."
+    "lint": "prettier --check . && eslint . --max-warnings=0",
+    "lint:fix": "eslint --fix . && prettier --write ."
   },
   "devDependencies": {
     "@solarwinds-apm/eslint-config": "workspace:^",
-    "eslint": "^8.44.0",
+    "eslint": "^8.45.0",
     "prettier": "^3.0.0"
   }
 }
