--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@solarwinds-apm/solarwinds-apm",
   "private": true,
   "license": "Apache-2.0",
-  "packageManager": "yarn@3.6.0",
+  "packageManager": "yarn@4.0.0-rc.48",
   "workspaces": [
     "examples",
     "examples/*",
@@ -24,9 +24,14 @@
     "vscode": "yarn dlx @yarnpkg/sdks vscode && node scripts/vscode.js && prettier --write .vscode"
   },
   "devDependencies": {
-    "eslint": "^8.44.0",
+    "eslint": "^8.45.0",
     "prettier": "^3.0.0",
-    "turbo": "^1.10.7",
+    "turbo": "^1.10.10",
     "typescript": "^5.1.6"
+  },
+  "dependenciesMeta": {
+    "prettier": {
+      "unplugged": true
+    }
   }
 }
