--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -21,17 +21,17 @@
     "provenance": true
   },
   "scripts": {
-    "lint": "prettier --check . && eslint --max-warnings=0 *.js",
-    "lint:fix": "eslint --fix *.js && prettier --write .",
+    "lint": "prettier --check . && eslint . --max-warnings=0",
+    "lint:fix": "eslint --fix . && prettier --write .",
     "publish": "node ../../scripts/publish.js"
   },
   "dependencies": {
-    "@eslint/js": "^8.44.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@eslint/js": "^8.45.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-header": "^3.1.1",
-    "eslint-plugin-jest": "^27.2.2",
+    "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "globals": "^13.20.0"
@@ -43,7 +43,7 @@
     "typescript": "*"
   },
   "devDependencies": {
-    "eslint": "^8.44.0",
+    "eslint": "^8.45.0",
     "prettier": "^3.0.0"
   },
   "peerDependenciesMeta": {
