--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -23,8 +23,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "lint": "prettier --check . && eslint --max-warnings=0 *.js src/** test/**/*.ts",
-    "lint:fix": "eslint --fix *.js src/** test/**/*.ts && prettier --write .",
+    "lint": "prettier --check . && eslint . --max-warnings=0",
+    "lint:fix": "eslint --fix . && prettier --write .",
     "publish": "node ../../scripts/publish.js",
     "test": "jest --verbose"
   },
@@ -51,6 +51,7 @@
     "@opentelemetry/api": "1.4.x",
     "@opentelemetry/instrumentation": "0.41.x",
     "@opentelemetry/instrumentation-bunyan": "^0.32.0",
+    "@opentelemetry/instrumentation-fs": "^0.8.0",
     "@opentelemetry/instrumentation-http": "0.41.x",
     "@opentelemetry/instrumentation-mysql2": "^0.34.0",
     "@opentelemetry/instrumentation-pg": "^0.36.0",
@@ -61,7 +62,7 @@
     "@types/jest": "^29.5.3",
     "@types/node": "^16.0.0",
     "@types/semver": "^7.5.0",
-    "eslint": "^8.44.0",
+    "eslint": "^8.45.0",
     "jest": "^29.6.1",
     "jest-extended": "^4.0.0",
     "prettier": "^3.0.0",
