--- a/scripts/package.json
+++ b/scripts/package.json
@@ -2,15 +2,15 @@
   "name": "@solarwinds-apm/scripts",
   "private": true,
   "scripts": {
-    "lint": "prettier --check . && eslint --max-warnings=0 *.js",
-    "lint:fix": "eslint --fix *.js && prettier --write ."
+    "lint": "prettier --check . && eslint . --max-warnings=0",
+    "lint:fix": "eslint --fix . && prettier --write ."
   },
   "dependencies": {
     "bson": "^5.4.0"
   },
   "devDependencies": {
     "@solarwinds-apm/eslint-config": "workspace:^",
-    "eslint": "^8.44.0",
+    "eslint": "^8.45.0",
     "prettier": "^3.0.0"
   }
 }
