Next.js + Prisma example

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,7 +3,6 @@ changesetIgnorePatterns:
   - "**/eslint.config.js"
   - "**/jest.config.js"
   - "**/.clang-format"
-  - "**/.eslintignore"
   - "**/.prettierignore"
 
 initScope: "@solarwinds-apm"
@@ -16,3 +15,11 @@ enableGlobalCache: false
 npmPublishAccess: public
 preferDeferredVersions: true
 preferInteractive: true
+
+packageExtensions:
+  "@opentelemetry/instrumentation-mysql2@^0.34.0":
+    dependencies:
+      "@opentelemetry/sql-common": ^0.40.0
+  "eslint-config-next@^13":
+    dependencies:
+      "next": ^13
