--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -56,6 +56,7 @@
     "@opentelemetry/instrumentation-mysql2": "^0.34.0",
     "@opentelemetry/instrumentation-pg": "^0.36.0",
     "@opentelemetry/instrumentation-pino": "^0.34.0",
+    "@opentelemetry/instrumentation-winston": "^0.32.0",
     "@opentelemetry/resources": "1.15.x",
     "@opentelemetry/sdk-trace-node": "1.15.x",
     "@solarwinds-apm/eslint-config": "workspace:^",
