--- a/package.json
+++ b/package.json
@@ -24,10 +24,8 @@
     "vscode": "yarn dlx @yarnpkg/sdks vscode && node scripts/vscode.js && prettier --write .vscode"
   },
   "devDependencies": {
-    "eslint": "^8.45.0",
     "prettier": "^3.0.0",
-    "turbo": "^1.10.10",
-    "typescript": "^5.1.6"
+    "turbo": "^1.10.10"
   },
   "dependenciesMeta": {
     "prettier": {
