--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -15,6 +15,7 @@ enableGlobalCache: false
 npmPublishAccess: public
 preferDeferredVersions: true
 preferInteractive: true
+pnpFallbackMode: none
 
 packageExtensions:
   "@opentelemetry/instrumentation-mysql2@^0.34.0":
