--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -34,7 +34,8 @@
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tsdoc": "^0.2.17",
-    "globals": "^13.20.0"
+    "globals": "^13.20.0",
+    "typescript": "^5.1.6"
   },
   "peerDependencies": {
     "eslint": "^8.23.0",
