--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -49,7 +49,7 @@
   },
   "devDependencies": {
     "@opentelemetry/api": "1.4.x",
-    "@opentelemetry/instrumentation": "0.41.x",
+    "@opentelemetry/instrumentation": "0.41.x >=0.41.2",
     "@opentelemetry/instrumentation-bunyan": "^0.32.0",
     "@opentelemetry/instrumentation-fs": "^0.8.0",
     "@opentelemetry/instrumentation-http": "0.41.x",
@@ -63,10 +63,10 @@
     "@types/jest": "^29.5.3",
     "@types/node": "^16.0.0",
     "@types/semver": "^7.5.0",
-    "eslint": "^8.45.0",
-    "jest": "^29.6.1",
-    "jest-extended": "^4.0.0",
-    "prettier": "^3.0.0",
+    "eslint": "^8.46.0",
+    "jest": "^29.6.2",
+    "jest-extended": "^4.0.1",
+    "prettier": "^3.0.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   },
