--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -46,11 +46,9 @@
   "dependencies": {
     "@opentelemetry/auto-instrumentations-node": "^0.38.0",
     "@opentelemetry/core": "1.15.x",
-    "@opentelemetry/exporter-metrics-otlp-grpc": "0.41.x",
-    "@opentelemetry/instrumentation": "0.41.x",
+    "@opentelemetry/instrumentation": "0.41.x >=0.41.2",
     "@opentelemetry/resources": "1.15.x",
     "@opentelemetry/sdk-metrics": "1.15.x",
-    "@opentelemetry/sdk-trace-base": "1.15.x",
     "@opentelemetry/sdk-trace-node": "1.15.x",
     "@opentelemetry/semantic-conventions": "1.15.x",
     "@solarwinds-apm/merged-config": "workspace:^",
@@ -77,9 +75,9 @@
     "@solarwinds-apm/bindings": "workspace:^",
     "@solarwinds-apm/eslint-config": "workspace:^",
     "@types/node": "^16.0.0",
-    "eslint": "^8.45.0",
+    "eslint": "^8.46.0",
     "json5": "^2.2.3",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
