fix yarn up command

--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - run: yarn install
-      - run: yarn up -R '*'
+      - run: yarn up -R '**'
       - run: yarn dedupe
 
       - name: PR
