--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -11,6 +11,10 @@ jobs:
       pull-requests: write
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - run: corepack enable
 
       - run: yarn install
       - run: yarn up -R '**'
