--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -18,9 +18,6 @@ preferInteractive: true
 pnpFallbackMode: none
 
 packageExtensions:
-  "@opentelemetry/instrumentation-mysql2@^0.34.0":
-    dependencies:
-      "@opentelemetry/sql-common": ^0.40.0
   "eslint-config-next@^13":
-    dependencies:
+    peerDependencies:
       "next": ^13
