--- a/packages/bindings/npm/linux-arm64-gnu/package.json
+++ b/packages/bindings/npm/linux-arm64-gnu/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solarwinds-apm/bindings-linux-arm64-gnu",
-  "version": "0.0.0",
+  "version": "1.0.0-pre.1",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
