--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solarwinds-apm/eslint-config",
-  "version": "0.0.0",
+  "version": "1.0.0-pre.1",
   "license": "Apache-2.0",
   "contributors": [
     "Raphaël Thériault <raphael.theriault@solarwinds.com>"
@@ -57,5 +57,6 @@
     "typescript": {
       "optional": true
     }
-  }
+  },
+  "stableVersion": "0.0.0"
 }
