--- a/packages/histogram/package.json
+++ b/packages/histogram/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solarwinds-apm/histogram",
-  "version": "0.0.0",
+  "version": "1.0.0-pre.1",
   "license": "Apache-2.0",
   "contributors": [
     "Raphaël Thériault <raphael.theriault@solarwinds.com>"
@@ -38,5 +38,6 @@
   },
   "engines": {
     "node": ">=16"
-  }
+  },
+  "stableVersion": "0.0.0"
 }
