--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -45,7 +45,8 @@ jobs:
       # we can force it to be the root of the repo by including an empty file present at the root
       # see https://github.com/actions/upload-artifact#upload-using-multiple-paths-and-exclusions
       - run: touch .root
-      - uses: actions/upload-artifact@v3
+      - if: github.event_name == 'pull_request' && contains(github.head_ref, 'release')
+        uses: actions/upload-artifact@v3
         with:
           name: build
           path: |
@@ -158,7 +159,7 @@ jobs:
       YARN_IGNORE_NODE: 1
 
     steps:
-      - if: ${{ matrix.arch == 'arm64' && contains(matrix.image, 'alpine') }}
+      - if: matrix.arch == 'arm64' && contains(matrix.image, 'alpine')
         run: sed -i "s/ID=alpine/ID=armpine/" /etc/os-release
 
       - uses: actions/checkout@v3
