--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -11,13 +11,9 @@ initFields:
   publishConfig:
     provenance: true
 
+nodeLinker: node-modules
 enableGlobalCache: false
 npmPublishAccess: public
 preferDeferredVersions: true
 preferInteractive: true
 pnpFallbackMode: none
-
-packageExtensions:
-  "eslint-config-next@^13":
-    peerDependencies:
-      "next": ^13
