--- a/packages/bindings/package.json
+++ b/packages/bindings/package.json
@@ -27,18 +27,16 @@
     "lint": "prettier --check . && eslint . --max-warnings=0 && clang-format src/*.hh src/*/* -n --Werror",
     "lint:fix": "eslint --fix . && prettier --write . && clang-format src/*.hh src/*/* -i --Werror",
     "publish": "node ../../scripts/publish.js",
-    "test": "jest --verbose",
+    "test": "swtest",
     "oboe": "node oboe.js"
   },
   "devDependencies": {
     "@solarwinds-apm/eslint-config": "workspace:^",
-    "@types/jest": "^29.5.3",
+    "@solarwinds-apm/test": "workspace:^",
     "@types/node": "^16.0.0",
     "eslint": "^8.47.0",
-    "jest": "^29.6.2",
     "node-addon-api": "^7.0.0",
     "prettier": "^3.0.2",
-    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6",
     "zig-build": "^0.2.1"
   },
