--- a/packages/merged-config/package.json
+++ b/packages/merged-config/package.json
@@ -26,16 +26,14 @@
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
     "publish": "node ../../scripts/publish.js",
-    "test": "jest --verbose"
+    "test": "swtest -p test/tsconfig.json"
   },
   "devDependencies": {
     "@solarwinds-apm/eslint-config": "workspace:^",
-    "@types/jest": "^29.5.3",
+    "@solarwinds-apm/test": "workspace:^",
     "@types/node": "^16.0.0",
     "eslint": "^8.47.0",
-    "jest": "^29.6.2",
     "prettier": "^3.0.2",
-    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   },
   "engines": {
