--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -26,7 +26,7 @@
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
     "publish": "node ../../scripts/publish.js",
-    "test": "jest --verbose"
+    "test": "swtest -p test/tsconfig.json"
   },
   "dependencies": {
     "@opentelemetry/core": "1.15.x",
@@ -60,14 +60,11 @@
     "@opentelemetry/resources": "1.15.x",
     "@opentelemetry/sdk-trace-node": "1.15.x",
     "@solarwinds-apm/eslint-config": "workspace:^",
-    "@types/jest": "^29.5.3",
+    "@solarwinds-apm/test": "workspace:^",
     "@types/node": "^16.0.0",
     "@types/semver": "^7.5.0",
     "eslint": "^8.47.0",
-    "jest": "^29.6.2",
-    "jest-extended": "^4.0.1",
     "prettier": "^3.0.2",
-    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   },
   "engines": {
