attempt to run on arm alpine 3.15

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -134,21 +134,18 @@ jobs:
           - 16-ubi8
           - 16-ubuntu18.04
           - 18-alpine
-          # - 18-amazonlinux
+          # - 18-amazonlinux - https://github.com/amazonlinux/amazon-linux-2023/issues/365
           - 18-debian
           - 18-ubi
           - 18-ubuntu
           - 20-alpine
-          # - 20-amazonlinux
+          # - 20-amazonlinux - https://github.com/amazonlinux/amazon-linux-2023/issues/365
           - 20-debian
           - 20-ubi
           - 20-ubuntu
         arch:
           - x64
           - arm64
-        exclude:
-          - image: 16-alpine3.15
-            arch: arm64
       fail-fast: false
     container:
       image: ghcr.io/${{ github.repository }}/dev:${{ matrix.image }}
