--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: .
       dockerfile: 16-alpine3.15.Dockerfile
+    environment:
+      YARN_IGNORE_NODE: 1
     volumes:
       - ..:/solarwinds-apm
     links:
@@ -13,6 +15,8 @@ services:
     build:
       context: .
       dockerfile: 16-amazonlinux2.Dockerfile
+    environment:
+      YARN_IGNORE_NODE: 1
     volumes:
       - ..:/solarwinds-apm
     links:
@@ -22,6 +26,8 @@ services:
     build:
       context: .
       dockerfile: 16-debian10.Dockerfile
+    environment:
+      YARN_IGNORE_NODE: 1
     volumes:
       - ..:/solarwinds-apm
     links:
@@ -31,6 +37,8 @@ services:
     build:
       context: .
       dockerfile: 16-ubi8.Dockerfile
+    environment:
+      YARN_IGNORE_NODE: 1
     volumes:
       - ..:/solarwinds-apm
     links:
@@ -40,6 +48,8 @@ services:
     build:
       context: .
       dockerfile: 16-ubuntu18.04.Dockerfile
+    environment:
+      YARN_IGNORE_NODE: 1
     volumes:
       - ..:/solarwinds-apm
     links:
