specify base flag properly

--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -31,6 +31,6 @@ jobs:
           git commit -m "Update lockfile"
           git push origin +actions/lockfile
 
-          gh pr create -b ${{ github.ref_name }} -t "Update lockfile" --body-file .github/resources/lockfile-pr-body.md
+          gh pr create -B ${{ github.ref_name }} -t "Update lockfile" --body-file .github/resources/lockfile-pr-body.md
         env:
           GITHUB_TOKEN: ${{ github.token }}
