--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "lint:fix": "prettier --write *.json *.md .github && turbo run lint:fix --continue",
     "publish": "turbo run build && turbo run lint && turbo run publish",
     "test": "turbo run test --continue",
-    "version:stable": "node scripts/version.js",
-    "version:pre": "node scripts/version.js pre"
+    "version:latest": "node scripts/version.js",
+    "version:prerelease": "node scripts/version.js pre"
   },
   "devDependencies": {
     "eslint": "^8.47.0",
