--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -8,6 +8,7 @@ jobs:
   lockfile:
     runs-on: ubuntu-latest
     permissions:
+      actions: write
       contents: write
       pull-requests: write
     steps:
