mark version bumps

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,9 +1,5 @@
 changesetIgnorePatterns:
-  - "**/test/**"
-  - "**/eslint.config.js"
-  - "**/jest.config.js"
-  - "**/.clang-format"
-  - "**/.prettierignore"
+  - "packages/*/test/**"
 
 initScope: "@solarwinds-apm"
 initFields:
