--- a/examples/express-mysql/package.json
+++ b/examples/express-mysql/package.json
@@ -5,9 +5,9 @@
     "start": "node -r solarwinds-apm index.js"
   },
   "dependencies": {
-    "@opentelemetry/api": "1.4.x",
+    "@opentelemetry/api": "^1.3.0",
     "express": "^4.18.2",
-    "mysql2": "^3.6.0",
+    "mysql2": "^3.6.1",
     "solarwinds-apm": "workspace:^",
     "winston": "^3.10.0"
   }
