--- a/examples/fastify-postgres/package.json
+++ b/examples/fastify-postgres/package.json
@@ -6,10 +6,10 @@
   },
   "dependencies": {
     "@fastify/postgres": "^5.2.0",
-    "@opentelemetry/api": "1.4.x",
-    "fastify": "^4.21.0",
+    "@opentelemetry/api": "^1.3.0",
+    "fastify": "^4.23.2",
     "pg": "^8.11.3",
-    "pino": "^8.15.0",
+    "pino": "^8.15.1",
     "solarwinds-apm": "workspace:^"
   }
 }
