--- a/examples/hello-distributed/package.json
+++ b/examples/hello-distributed/package.json
@@ -5,7 +5,7 @@
     "start": "concurrently \"node -r solarwinds-apm external.js\" \"node -r solarwinds-apm internal.js\""
   },
   "dependencies": {
-    "@opentelemetry/api": "1.4.x",
+    "@opentelemetry/api": "^1.3.0",
     "solarwinds-apm": "workspace:^"
   },
   "devDependencies": {
