--- a/examples/hello/package.json
+++ b/examples/hello/package.json
@@ -5,7 +5,7 @@
     "start": "node -r solarwinds-apm index.js"
   },
   "dependencies": {
-    "@opentelemetry/api": "1.4.x",
+    "@opentelemetry/api": "^1.3.0",
     "solarwinds-apm": "workspace:^"
   }
 }
