--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -45,11 +45,8 @@
     "test": "swtest -p test/tsconfig.json -c src"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.9.3",
     "@opentelemetry/auto-instrumentations-node": "^0.39.2",
     "@opentelemetry/core": "~1.17.0",
-    "@opentelemetry/exporter-metrics-otlp-grpc": "~0.43.0",
-    "@opentelemetry/exporter-trace-otlp-grpc": "~0.43.0",
     "@opentelemetry/instrumentation": "~0.43.0",
     "@opentelemetry/resources": "~1.17.0",
     "@opentelemetry/sdk-metrics": "~1.17.0",
@@ -61,12 +58,20 @@
   },
   "peerDependencies": {
     "@opentelemetry/api": "^1.3.0",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "~0.43.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "~0.43.0",
     "json5": ">=1.0.0",
     "ts-node": ">=9.0.0"
   },
   "peerDependenciesMeta": {
     "@opentelemetry/api": {
       "optional": false
+    },
+    "@opentelemetry/exporter-metrics-otlp-grpc": {
+      "optional": true
+    },
+    "@opentelemetry/exporter-trace-otlp-grpc": {
+      "optional": true
     },
     "json5": {
       "optional": true
@@ -77,6 +82,8 @@
   },
   "devDependencies": {
     "@opentelemetry/api": "^1.3.0",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "~0.43.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "~0.43.0",
     "@solarwinds-apm/eslint-config": "workspace:^",
     "@solarwinds-apm/test": "workspace:^",
     "@types/node": "^16.13.0",
