fixup package names for npm registry

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -33,6 +33,10 @@ jobs:
             zig-
 
       - run: yarn install --immutable
+
+      - run: |
+          git grep -lz '@solarwinds-apm/' | xargs -0 sed -ie 's:@solarwinds-apm/:@${{ github.repository_owner }}/solarwinds-apm-:g'
+          git grep -lz -G 'solarwinds-apm[^-]' | xargs -0 sed -ie 's:solarwinds-apm[^-]:@${{ github.repository_owner }}/solarwinds-apm:g'
       - run: yarn version:testing
       - run: yarn publish
         env:
